# AI_chatbot

./: .gitignore  pyproject.toml
backend/: Food_recommendation_chatbot.py  chat.db  databases.py  main.py  models.py  schemas.py
backend/routers/: chat.py  messages.py  root.py  sessions.py
backend/unit_test/: chat.db  default_test.py  new_test.py  test_chat.py
chromaDB/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
