[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "typing>=3.10.0.0",
]
